--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Brandon Dail",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir lib --source-maps"
+    "build": "babel src --out-dir lib --source-maps",
+    "test": "npm run build && karma start --single-run --browsers ChromeHeadless karma.conf.js"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.0",
@@ -15,12 +16,23 @@
     "lodash.sortby": "^4.7.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
-    "react": "^15.6.1"
+    "react": "^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "flow-bin": "^0.55.0",
-    "jest": "^21.1.0"
+    "jest": "^21.1.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.4",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.3",
+    "react-dom": "^16.0.0",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.6.0"
   }
 }
