--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-image-theme-parser",
+  "name": "react-image-palette",
   "version": "0.1.0",
   "description": "Create ARIA-compliant color themes based on any image.",
   "main": "lib/index.js",
@@ -7,6 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir lib --source-maps",
+    "prepublish": "npm run build",
+    "preversion": "npm test",
     "test": "npm run build && karma start --single-run --browsers ChromeHeadless karma.conf.js"
   },
   "dependencies": {
