--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "babel src --out-dir lib --source-maps",
     "prepublish": "npm run build",
     "preversion": "npm test",
+    "version": "np",
     "test": "npm run build && karma start --single-run --browsers ChromeHeadless karma.conf.js"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "karma-mocha-reporter": "^2.2.4",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.5.3",
+    "np": "^2.16.0",
     "react-dom": "^16.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0"
