--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "build": "babel src --out-dir lib --source-maps",
     "prepublish": "npm run build",
     "preversion": "npm run test",
-    "test": "npm run build && karma start --single-run --browsers ChromeHeadless karma.conf.js"
+    "test": "npm run build && karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "babel-preset-env": "^1.6.0",
@@ -25,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "flow-bin": "^0.55.0",
+    "husky": "^0.14.3",
     "jest": "^21.1.0",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
@@ -32,7 +40,9 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.4",
     "karma-webpack": "^2.0.4",
+    "lint-staged": "^4.2.3",
     "mocha": "^3.5.3",
+    "prettier": "^1.7.2",
     "react-dom": "^16.0.0",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0"
