--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,18 @@
 {
   "presets": [
-    "react",
-    "env"
-  ]
+    ["env", {
+      "modules": false
+    }],
+    "react"
+  ],
+  "env": {
+    "commonjs": {
+      "plugins": [
+        ["transform-es2015-modules-commonjs", {
+          "strict": false,
+          "allowTopLevelThis": true
+        }]
+      ]
+    }
+  }
 }
