--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && npm run build:es && npm run build:lib",
-    "build:es": "BABEL_ENV=es babel src --out-dir es --source-maps",
-    "build:lib": "BABEL_ENV= babel src --out-dir lib --source-maps",
+    "build:es": "BABEL_ENV=es babel src --out-dir es",
+    "build:lib": "BABEL_ENV= babel src --out-dir lib",
     "clean": "rimraf es && rimraf lib",
     "prepublish": "npm run build",
     "preversion": "npm run test",
