--- a/demo/package.json
+++ b/demo/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-image-palette": "^0.1.2",
+    "react-scripts": "1.0.13",
+    "react-spinkit": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
