--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
-	"name": "image-palette",
-	"private": true,
-	"devDependencies": {
-		"lerna": "^2.1.2"
-	}
+   "name": "image-palette",
+   "private": true,
+   "scripts": {
+     "test": "lerna run test"
+   },
+   "devDependencies": {
+      "babel-cli": "^6.26.0",
+      "babel-preset-env": "^1.6.0",
+      "babel-preset-react": "^6.24.1",
+      "chai": "^4.1.2",
+      "flow-bin": "^0.55.0",
+      "karma": "^1.7.1",
+      "karma-chai": "^0.1.0",
+      "karma-chrome-launcher": "^2.2.0",
+      "karma-mocha": "^1.3.0",
+      "karma-mocha-reporter": "^2.2.4",
+      "karma-webpack": "^2.0.4",
+      "lerna": "^2.1.2",
+      "mocha": "^3.5.3",
+      "prettier": "^1.7.2",
+      "rimraf": "^2.6.2",
+      "url-loader": "^0.6.2",
+      "webpack": "^3.8.1"
+   }
 }
