--- a/packages/image-palette-core/package.json
+++ b/packages/image-palette-core/package.json
@@ -12,7 +12,9 @@
     "build:es": "BABEL_ENV=es babel src --out-dir es",
     "build:lib": "BABEL_ENV=commonjs babel src --out-dir lib",
     "clean": "rimraf es && rimraf lib",
-    "preversion": "npm run test"
+    "preversion": "npm run test",
+    "test:only": "karma start --single-run --browsers ChromeHeadless ../../karma.conf.js",
+    "test": "npm run build && npm run test:only"
   },
   "dependencies": {
     "color": "^2.0.0",
@@ -20,28 +22,5 @@
     "lodash.sortby": "^4.7.0",
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.1.2",
-    "flow-bin": "^0.55.0",
-    "husky": "^0.14.3",
-    "jest": "^21.1.0",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.4",
-    "karma-webpack": "^2.0.4",
-    "lerna": "^2.5.1",
-    "lint-staged": "^4.2.3",
-    "mocha": "^3.5.3",
-    "prettier": "^1.7.2",
-    "react-dom": "^16.0.0",
-    "rimraf": "^2.6.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.6.0"
   }
 }
