--- a/packages/react-image-palette/package.json
+++ b/packages/react-image-palette/package.json
@@ -13,7 +13,7 @@
     "build:lib": "BABEL_ENV=commonjs babel src --out-dir lib",
     "clean": "rimraf es && rimraf lib",
     "preversion": "npm run test",
-    "test:only": "karma start --single-run --browsers ChromeHeadless karma.conf.js",
+    "test:only": "karma start --single-run --browsers ChromeHeadless ../../karma.conf.js",
     "test": "npm run build && npm run test:only"
   },
   "dependencies": {
@@ -21,26 +21,6 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.1.2",
-    "flow-bin": "^0.55.0",
-    "husky": "^0.14.3",
-    "jest": "^21.1.0",
-    "karma": "^1.7.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.4",
-    "karma-webpack": "^2.0.4",
-    "lerna": "^2.5.1",
-    "lint-staged": "^4.2.3",
-    "mocha": "^3.5.3",
-    "prettier": "^1.7.2",
-    "react-dom": "^16.0.0",
-    "rimraf": "^2.6.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.6.0"
+    "react-dom": "^16.1.0"
   }
 }
