--- a/packages/react-image-palette/package.json
+++ b/packages/react-image-palette/package.json
@@ -23,6 +23,6 @@
     "react-dom": "^16.1.0"
   },
   "peerDependencies": {
-    "react": "^15.0.0 | ^16.0.0"
+    "react": "^15.0.0-0 || ^16.0.0-0"
   }
 }
