--- a/packages/image-palette-core/package.json
+++ b/packages/image-palette-core/package.json
@@ -16,6 +16,11 @@
     "test:only": "karma start --single-run --browsers ChromeHeadless ../../karma.conf.js",
     "test": "npm run build && npm run test:only"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FormidableLabs/image-palette.git",
+    "directory": "packages/image-palette-core"
+  },
   "dependencies": {
     "color": "^2.0.0",
     "lodash.isequal": "^4.5.0",
